<resources>
    <string name="app_name">Attendance_Manager_Project</string>
    <string name="Remember_Me">Remember Me</string>
    <string name="Forgot_Password">Forgot Password</string>
    <string name="create_session">Create Attendance Session</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="logo">logo</string>
    <string name="asession_name">Attendance Session Name</string>
    <string name="select_start_time">Start Time</string>
    <string name="duration">Session Duration</string>
    <string name="submit">Submit</string>
    <string name="Loading">Loading</string>
    <string name="subject">Subject</string>
    <string-array name="sem_Entries">
        <item>Sem-1</item>
        <item>Sem-2</item>
        <item>Sem-3</item>
        <item>Sem-4</item>
        <item>Sem-5</item>
        <item>Sem-6</item>
    </string-array>
    <string-array name="subject_Entries">
        <item>AAD</item>
        <item>PHP</item>
        <item>WNS</item>
        <item>AJAVA</item>
    </string-array>
    <string-array name="Empty">
        <item>Loading</item>
    </string-array>
</resources>